--- a/index.html
+++ b/index.html
@@ -3,69 +3,40 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  <link rel="stylesheet" href="css/style.css">  
+  
   <title>Frontend Mentor | Bento grid</title>
+
+  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <style>
+    .attribution { font-size: 11px; text-align: center; }
+    .attribution a { color: hsl(228, 45%, 44%); }
+  </style>
 </head>
 <body>
-  <main>
-    <div class="container">
-      <section class="social-media purple-500">
-        <h1>Social Media <span>10x <br></span><span class="faster">Faster </span>with AI</h1>
-        <div class="stars">
-          <img src="./assets/images/illustration-five-stars.webp" alt="Five stars illustration">
-        </div>
-        <h5>Over 4,000 5-star reviews</h5>
-      </section>
 
-      <section class="manage-accounts white">
-        <div class="multiple-platforms">
-          <img src="./assets/images/illustration-multiple-platforms.webp" alt="Multiple platforms illustration">
-        </div>
-        <p>Manage <br>multiple <br>accounts and <br>platforms.</p>
-        <h2>>56%</h2>
-        <h5>faster audience growth</h5>
-        <div class="audience-growth">
-          <img src="./assets/images/illustration-audience-growth.webp" alt="Audience growth illustration">
-        </div>
-      </section>
+  Social Media 10x Faster with AI
+  Over 4,000 5-star reviews
 
-      <section class="posting-schedule yellow-500">
-        <p>Maintain a <br>consistent <br>posting <br>schedule.</p>
-        <div class="posting-schedule-image">
-          <img src="./assets/images/illustration-consistent-schedule.webp" alt="Schedule posts illustration">
-        </div>
-      </section>
+  Manage multiple accounts and platforms.
 
-      <section class="schedule purple-100">
-        <p>Schedule to <br>social media.</p>
-        <div class="schedule-image">
-          <img src="./assets/images/illustration-schedule-posts.webp" alt="Schedule posts illustration">
-        </div>
-        <h5>Optimize post timings to publish content at the perfect time for your audience.</h5>
-      </section>
+  Maintain a consistent posting schedule.
 
-      <section class="grow-followers purple-500">
-        <div class="grow-followers-image">
-          <img src="./assets/images/illustration-grow-followers.webp" alt="Grow followers illustration">
-        </div>
-        <h2>Grow followers <br>with non-stop <br>content.</h2>
-      </section>
+  Schedule to social media.
+  Optimize post timings to publish content at the perfect time for your audience.
+  
+  Grow followers with non-stop content.
 
-      <section class="create-content yellow-100">
-        <h2>Create and <br>schedule <br>content <br><span class="purple-500-text">quicker</span></h2>
-        <div class="create-content-image">
-          <img src="./assets/images/illustration-create-post.webp" alt="Create content illustration">
-        </div>
-      </section>
+  >56% faster audience growth
+  
+  Create and schedule content quicker.
 
-      <section class="ai-content yellow-500">
-        <h2>Write your <br>content <br>using AI.</h2>
-        <div class="ai-content-image">
-          <img src="./assets/images/illustration-ai-content.webp" alt="AI content illustration">
-        </div>
-      </section>
-    </div>
-  </main>
+  Write your content using AI.
+  
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
+    Coded by <a href="#">Your Name Here</a>.
+  </div>
 </body>
 </html>
