--- a/index.html
+++ b/index.html
@@ -5,19 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="css/style.css">  
   <title>Frontend Mentor | Bento grid</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
+  <div class="container">
+    <div class="grid-ca">
+      <div class="social social-h">
+        <h1>Social Media <span>10x</span> Faster with AI</h1>
+        <img src="./assets/images/illustration-five-stars.webp" alt="Five stars">
+        <p>Over 4,000 5-star reviews</p>     
+      </div>
 
-  Social Media 10x Faster with AI
-  Over 4,000 5-star reviews
+      <div class="management management-c">
+        
+      </div>
+    </div>
+  </div>
+  
+  
 
   Manage multiple accounts and platforms.
 
@@ -36,7 +42,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Glenda J. Reed</a>.
   </div>
 </body>
 </html>
