--- a/index.html
+++ b/index.html
@@ -5,60 +5,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  <link rel="stylesheet" href="css/style.css">  
+  
   <title>Frontend Mentor | Bento grid</title>
+
+  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <style>
+    .attribution { font-size: 11px; text-align: center; }
+    .attribution a { color: hsl(228, 45%, 44%); }
+  </style>
 </head>
 <body>
-  <div class="container">
-    <div class="grid-ca">
-      <div class="social social-h">
-        <h1>Social Media <span>10x</span> Faster with AI</h1>
-        <img src="./assets/images/illustration-five-stars.webp" alt="Five stars">
-        <p>Over 4,000 5-star reviews</p>     
-      </div>
 
-      <div class="management management-c">
-        <img src="./assets/images/illustration-multiple-platforms.webp" alt="Multiple platforms">
-        <h1>Manage multiple accounts and platforms.</h1>
-      </div>
+  Social Media 10x Faster with AI
+  Over 4,000 5-star reviews
 
-      <div class="schedule schedule-c1">
-        <h1>Maintain a consistent posting schedule.</h1>
-        <img src="./assets/images/illustration-consistent-schedule.webp" alt="Consistent schedule">
-      </div>
-      
-      <div class="schedule-to-social schedule-to-social-v">
-        <h1>Schedule to social media.</h1>
-        <img src="./assets/images/illustration-schedule-posts.webp" alt="Schedule posts">
-        <p>Optimize post timings to publish content at the perfect time for your audience.</p>
-      </div>
+  Manage multiple accounts and platforms.
 
-      <div class="grow grow-h">
-        <img src="./assets/images/illustration-grow-followers.webp" alt="Grow followers">
-        <h1>Grow followers with non-stop content.</h1>
-      </div>
+  Maintain a consistent posting schedule.
 
-      <div class="audience audience-p">
-        <h1>>56%</h1>
-        <p>faster audience growth</p>
-        <img src="./assets/images/illustration-audience-growth.webp" alt="Audience growth">
-      </div>
+  Schedule to social media.
+  Optimize post timings to publish content at the perfect time for your audience.
+  
+  Grow followers with non-stop content.
 
-      <div class="quicker quicker-v">
-        <h1>Create and schedule content <span>quicker</span>.</h1>
-        <img src="./assets/images/illustration-create-post.webp" alt="Create post">
-      </div>
+  >56% faster audience growth
+  
+  Create and schedule content quicker.
 
-      <div class="ai-content ai-content-h">
-        <h1>Write your content using AI.</h1>
-        <img src="./assets/images/illustration-ai-content.webp" alt="AI content">
-      </div>
-    </div>
-  </div>
-    
+  Write your content using AI.
+  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
-    Coded by <a href="#">Glenda J. Reed</a>.
+    Coded by <a href="#">Your Name Here</a>.
   </div>
 </body>
 </html>
