--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="css/style.css">  
   <title>Frontend Mentor | Bento grid</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -15,28 +14,54 @@
   </style>
 </head>
 <body>
+  <main>
+    <div id="item-1">
+      <h2>Create and schedule content <span>quicker.</span></h2>
+      <img src="./assets/images/illustration-create-post.webp" alt="">
+    </div>
 
-  Social Media 10x Faster with AI
-  Over 4,000 5-star reviews
+    <div id="item-2">
+      <h1>Social Media <span class="number">10x </span><br><span class="text">Faster </span>with AI</h1>
+      <img src="./assets/images/illustration-five-stars.webp" alt="">
+      <p>Over 4,000 5-star reviews</p>
+    </div>
 
-  Manage multiple accounts and platforms.
+    <div id="item-3">
+      <h2>Schedule to social media.</h2>
+      <img src="./assets/images/illustration-schedule-posts.webp" alt="">
+      <p>Optimize post timings to publish content at the perfect time for your audience.</p>
+    </div>
 
-  Maintain a consistent posting schedule.
+    <div id="item-4">
+      <h2>Write your content using AI.</h2>
+      <img src="./assets/images/illustration-ai-content.webp" alt="">
+    </div>
 
-  Schedule to social media.
-  Optimize post timings to publish content at the perfect time for your audience.
-  
-  Grow followers with non-stop content.
+    <div id="item-5">
+      <img src="./assets/images/illustration-multiple-platforms.webp" alt="">
+      <h2>Manage multiple accounts and platforms.</h2>
+    </div>
 
-  >56% faster audience growth
-  
-  Create and schedule content quicker.
+    <div id="item-6">
+      <h2>Maintain a consistent posting schedule.</h2>
+      <img src="./assets/images/illustration-consistent-schedule.webp" alt="">
+    </div>
 
-  Write your content using AI.
+    <div id="item-7">
+      <h2>>56% </h2>
+      <p>faster audience growth</p>
+      <img src="./assets/images/illustration-audience-growth.webp" alt="">
+    </div>
+
+    <div id="item-8">
+      <img src="./assets/images/illustration-audience-growth.webp" alt="">
+      <h2>Grow your audience faster.</h2>
+    </div>
+  </main>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Glenda J. Reed</a>.
   </div>
 </body>
 </html>
