Update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     </div>
 
     <div id="item-8">
-      <img src="./assets/images/illustration-audience-growth.webp" alt="">
-      <h2>Grow your audience faster.</h2>
+      <img src="./assets/images/illustration-grow-followers.webp" alt="">
+      <h2>Grow followers with non-stop content.</h2>
     </div>
   </main>
   
